--- a/Supervised ML.ipynb
+++ b/Supervised ML.ipynb
@@ -411,7 +411,7 @@
     }
    ],
    "source": [
-    "# Comparison of actual and prdicted calues from the data\n",
+    "# Comparison of actual and predicted values from the data\n",
     "data=pd.DataFrame({\"Actual\":y_test,\"Predicted\":Predy})\n",
     "data"
    ]
